[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Piso.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Techo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlatformsSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD/HUDLayer.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.5, 325 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Spawn_Position" type="Position2D" parent="."]

[node name="Timer_Spawn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Piso" parent="." instance=ExtResource( 2 )]

[node name="Techo" parent="." instance=ExtResource( 3 )]

[node name="PlatformsSpawner" parent="." instance=ExtResource( 4 )]

[node name="HUDLayer" parent="." instance=ExtResource( 5 )]

[node name="WallL" type="StaticBody2D" parent="."]
position = Vector2( -8, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallL"]
position = Vector2( -0.5, 315 )
shape = SubResource( 1 )

[node name="WallR" type="StaticBody2D" parent="."]
position = Vector2( 369, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallR"]
position = Vector2( -0.5, 315 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer_Spawn" to="." method="_on_Timer_Spawn_timeout"]
